
name:                simple-vesting
version:             0.1.0.0
license:             Apache-2.0
author:              AI Assistant
maintainer:          ai@example.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VestingContract
  build-depends:       base >= 4.9 && < 5
                     , plutus-tx
                     , plutus-tx-plugin
                     , plutus-ledger-api
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable compiler
  main-is:             Compiler.hs
  hs-source-dirs:      app
  build-depends:       base >= 4.9 && < 5
                     , cardano-api
                     , serialise
                     , bytestring
                     , simple-vesting
  default-language:    Haskell2010
  ghc-options:         -Wall
